other-cel/enforce-pod-duration/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-lifetime
policies:
- ../enforce-pod-duration.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: pod-lifetime
  resources:
  - test-lifetime-fail
  result: fail
  rule: pods-lifetime
- kind: Pod
  policy: pod-lifetime
  resources:
  - test-lifetime-pass
  result: pass
  rule: pods-lifetime
